# -email-triage-env

./: README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
env/: __init__.py  environment.py  graders.py  models.py  reward.py  tasks.py
env/data/: easy_emails.json  hard_emails.json  medium_emails.json
tests/: test_env.py
