[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "0.1.0"
description = "OpenEnv email triage environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.109.0",
  "uvicorn==0.27.0",
  "pydantic==2.5.3",
  "openenv-core>=0.2.0",
  "openai>=2.7.2",
  "scipy==1.12.0",
  "numpy==1.26.3",
  "pyyaml==6.0.1",
  "httpx==0.26.0",
]

[project.scripts]
server = "app:server"

[tool.setuptools]
packages = ["env"]
